objects/Survey__c/fields/Case_1_NPS__c.field-meta.xml
<CustomField>
    <fullName>Case_1_NPS__c</fullName>
    <label>Transactional NPS</label>
    <length>20</length>
    <type>Text</type>
</CustomField>