objects/Survey__c/fields/Case_1_Promoter__c.field-meta.xml
<CustomField>
    <fullName>Case_1_Promoter__c</fullName>
    <formula>CASE( Case_1_Recommend__c, &apos;10&apos;,1,&apos;9&apos;,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transactional Promoter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>