objects/Survey__c/fields/Case_1_Recommend__c.field-meta.xml
<CustomField>
    <fullName>Case_1_Recommend__c</fullName>
    <label>Transactional NPS Factor</label>
    <length>20</length>
    <type>Text</type>
</CustomField>