objects/Survey__c/fields/Case_2_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Case_2_Satisfaction__c</fullName>
    <label>Overall Satisfaction</label>
    <length>20</length>
    <type>Text</type>
</CustomField>