objects/Survey__c/fields/Case_3_Speed_of_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Case_3_Speed_of_Resolution__c</fullName>
    <label>Speed of Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Extremely satisfied</fullName>
            </value>
            <value>
                <fullName>Very satisfied</fullName>
            </value>
            <value>
                <fullName>Somewhat satisfied</fullName>
            </value>
            <value>
                <fullName>Not so satisfied</fullName>
            </value>
            <value>
                <fullName>Not at all satisfied</fullName>
            </value>
            <value>
                <fullName>非常に満足</fullName>
            </value>
            <value>
                <fullName>やや満足</fullName>
            </value>
            <value>
                <fullName>普通</fullName>
            </value>
            <value>
                <fullName>やや不満</fullName>
            </value>
            <value>
                <fullName>非常に不満</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>