objects/Survey__c/fields/Case_5_Issue_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Case_5_Issue_Resolved__c</fullName>
    <label>Issue Resolved</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>はい</fullName>
            </value>
            <value>
                <fullName>いいえ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>