objects/Survey__c/fields/Case_6_Comment__c.field-meta.xml
<CustomField>
    <fullName>Case_6_Comment__c</fullName>
    <label>CSAT Survey Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>