objects/Survey__c/fields/CSAT_Score__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Score__c</fullName>
    <description>Calculates the average of all CSAT-related rating fields to provide an overall satisfaction score. JIRA: SS‑13029</description>
    <formula>(
Overall_Satisfaction__c +
Positive_Experience__c +
Met_Expectations__c +
Engineer_Knowledgable__c +
Professional_Courteous_Responsive__c +
Trusted_Provider__c
) / 6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSAT Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>