objects/Survey__c/fields/Deployment_Verification_Comments__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Verification_Comments__c</fullName>
    <description>Stores any comments that may have been entered in the Deployment Verification Survey Monkey survey. Jira ticket SS-12718.</description>
    <inlineHelpText>Stores any comments that may have been entered in the Deployment Verification Survey Monkey survey.</inlineHelpText>
    <label>Deployment Verification Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>