objects/Survey__c/fields/Deployment_Verification_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Verification_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The opportunity to which the survey was sent to the Deployment Partner Contact. Jira ticket SS-12718</description>
    <inlineHelpText>The opportunity to which the survey was sent to the Deployment Partner Contact</inlineHelpText>
    <label>Deployment Verification Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>