objects/Survey__c/fields/Deployment_Verification_Response__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Verification_Response__c</fullName>
    <description>Stores the response to the Yes/No question from the Deployment Verification Survey Monkey survey. Jira ticket SS-12718.</description>
    <inlineHelpText>Stores the response to the Yes/No question from the Deployment Verification Survey Monkey survey.</inlineHelpText>
    <label>Deployment Verification Response</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>