objects/Survey__c/fields/Detractor__c.field-meta.xml
<CustomField>
    <fullName>Detractor__c</fullName>
    <description>Detractor (Only for Transactional/Relational)</description>
    <formula>CASE(Name,&apos;Support Center CSAT&apos;,CASE( Case_1_Recommend__c, &apos;0&apos;,1,&apos;1&apos;,1,&apos;2&apos;,1,&apos;3&apos;,1,&apos;4&apos;,1,&apos;5&apos;,1,&apos;6&apos;,1,0),&apos;Relational NPS&apos;,CASE( Relational_1_Recommend__c, &apos;0&apos;,1,&apos;1&apos;,1,&apos;2&apos;,1,&apos;3&apos;,1,&apos;4&apos;,1,&apos;5&apos;,1,&apos;6&apos;,1,0),&apos;Relational NPS - Japan&apos;,CASE( Relational_1_Recommend__c, &apos;0&apos;,1,&apos;1&apos;,1,&apos;2&apos;,1,&apos;3&apos;,1,&apos;4&apos;,1,&apos;5&apos;,1,&apos;6&apos;,1,0),null)</formula>
    <label>Detractor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>