objects/Survey__c/fields/Engineer_Knowledgable__c.field-meta.xml
<CustomField>
    <fullName>Engineer_Knowledgable__c</fullName>
    <description>Evaluates the engineer’s expertise in Tanium and understanding of the customer’s business outcomes. JIRA: SS‑13029</description>
    <label>Engineer Knowledgable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>