objects/Survey__c/fields/Engineer_Names__c.field-meta.xml
<CustomField>
    <fullName>Engineer_Names__c</fullName>
    <description>Records the names of engineers involved in the deployment. JIRA: SS‑13029</description>
    <label>Engineer Names</label>
    <type>TextArea</type>
</CustomField>