objects/Survey__c/fields/ESCSAT_10a_Name__c.field-meta.xml
<CustomField>
    <fullName>ESCSAT_10a_Name__c</fullName>
    <label>ESCSAT_10a_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>