objects/Survey__c/fields/ESCSAT_10b_Company__c.field-meta.xml
<CustomField>
    <fullName>ESCSAT_10b_Company__c</fullName>
    <label>ESCSAT_10b_Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>