objects/Survey__c/fields/ESCSAT_1_NPS__c.field-meta.xml
<CustomField>
    <fullName>ESCSAT_1_NPS__c</fullName>
    <label>ESCSAT NPS</label>
    <length>20</length>
    <type>Text</type>
</CustomField>