objects/Survey__c/fields/ESCSAT_1_Recommend__c.field-meta.xml
<CustomField>
    <fullName>ESCSAT_1_Recommend__c</fullName>
    <inlineHelpText>Survey question: How likely is it that you would recommend Tanium Services to a friend or colleague?</inlineHelpText>
    <label>ESCSAT NPS Factor</label>
    <length>20</length>
    <type>Text</type>
</CustomField>