objects/Survey__c/fields/ESCSAT_2_CSAT__c.field-meta.xml
<CustomField>
    <fullName>ESCSAT_2_CSAT__c</fullName>
    <inlineHelpText>Survey question: Overall Engagement - How would you rate your overall experience with Tanium Services?</inlineHelpText>
    <label>ES Overall Satisfaction Factor</label>
    <length>20</length>
    <type>Text</type>
</CustomField>