objects/Survey__c/fields/ESCSAT_2_Reason__c.field-meta.xml
<CustomField>
    <fullName>ESCSAT_2_Reason__c</fullName>
    <inlineHelpText>Survey question: Why did you give that rating?</inlineHelpText>
    <label>ESCSAT_2_Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>