objects/Survey__c/fields/ESCSAT_2_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>ESCSAT_2_Satisfaction__c</fullName>
    <label>ES Overall Satisfaction</label>
    <length>50</length>
    <type>Text</type>
</CustomField>