objects/Survey__c/fields/ESCSAT_3_Experience__c.field-meta.xml
<CustomField>
    <fullName>ESCSAT_3_Experience__c</fullName>
    <inlineHelpText>Survey question: I had a positive experience getting started with Tanium Services.</inlineHelpText>
    <label>ESCSAT_3_Experience</label>
    <length>20</length>
    <type>Text</type>
</CustomField>