objects/Survey__c/fields/ESCSAT_4_Respect__c.field-meta.xml
<CustomField>
    <fullName>ESCSAT_4_Respect__c</fullName>
    <inlineHelpText>Survey question: Tanium Services provide appropriate team member(s) with respect to their skills and experience.</inlineHelpText>
    <label>ESCSAT_4_Respect</label>
    <length>20</length>
    <type>Text</type>
</CustomField>