objects/Survey__c/fields/ESCSAT_5_Goals__c.field-meta.xml
<CustomField>
    <fullName>ESCSAT_5_Goals__c</fullName>
    <inlineHelpText>Survey question: The goals of the engagement were/are being successfully met.</inlineHelpText>
    <label>ESCSAT_5_Goals</label>
    <length>20</length>
    <type>Text</type>
</CustomField>