objects/Survey__c/fields/ESCSAT_6_Professional__c.field-meta.xml
<CustomField>
    <fullName>ESCSAT_6_Professional__c</fullName>
    <inlineHelpText>Survey question: The Tanium Services team are professional, courteous and responsive throughout the engagement.</inlineHelpText>
    <label>ESCSAT_6_Professional</label>
    <length>20</length>
    <type>Text</type>
</CustomField>