objects/Survey__c/fields/ESCSAT_7_Trusted__c.field-meta.xml
<CustomField>
    <fullName>ESCSAT_7_Trusted__c</fullName>
    <inlineHelpText>Survey question: I believe Tanium is a trusted provider of services.</inlineHelpText>
    <label>ESCSAT_7_Trusted</label>
    <length>20</length>
    <type>Text</type>
</CustomField>