objects/Survey__c/fields/ESCSAT_8_Cost__c.field-meta.xml
<CustomField>
    <fullName>ESCSAT_8_Cost__c</fullName>
    <inlineHelpText>Survey question: The cost of the service is appropriate based on the value and outcomes delivered.</inlineHelpText>
    <label>ESCSAT_8_Cost</label>
    <length>20</length>
    <type>Text</type>
</CustomField>