objects/Survey__c/fields/ESCSAT_9_Comment__c.field-meta.xml
<CustomField>
    <fullName>ESCSAT_9_Comment__c</fullName>
    <inlineHelpText>Survey question: Please feel free to provide any additional comments.</inlineHelpText>
    <label>ESCSAT_9_Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>