objects/Survey__c/fields/ESO_1_Rate__c.field-meta.xml
<CustomField>
    <fullName>ESO_1_Rate__c</fullName>
    <label>ESO_1_Rate</label>
    <length>20</length>
    <type>Text</type>
</CustomField>