objects/Survey__c/fields/ESO_2_Needs__c.field-meta.xml
<CustomField>
    <fullName>ESO_2_Needs__c</fullName>
    <label>ESO_2_Needs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Faster Response</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Ease of contracting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>