objects/Survey__c/fields/ESO_3a_Trust__c.field-meta.xml
<CustomField>
    <fullName>ESO_3a_Trust__c</fullName>
    <label>ESO_3a_Trust</label>
    <length>20</length>
    <type>Text</type>
</CustomField>