objects/Survey__c/fields/ESO_3b_Ease__c.field-meta.xml
<CustomField>
    <fullName>ESO_3b_Ease__c</fullName>
    <label>ESO_3b_Ease</label>
    <length>20</length>
    <type>Text</type>
</CustomField>