objects/Survey__c/fields/ESO_3c_Effective__c.field-meta.xml
<CustomField>
    <fullName>ESO_3c_Effective__c</fullName>
    <label>ESO_3c_Effective</label>
    <length>20</length>
    <type>Text</type>
</CustomField>