objects/Survey__c/fields/ESO_3d_Value__c.field-meta.xml
<CustomField>
    <fullName>ESO_3d_Value__c</fullName>
    <label>ESO_3d_Value</label>
    <length>20</length>
    <type>Text</type>
</CustomField>