objects/Survey__c/fields/ESO_3e_SalesExp__c.field-meta.xml
<CustomField>
    <fullName>ESO_3e_SalesExp__c</fullName>
    <label>ESO_3e_SalesExp</label>
    <length>20</length>
    <type>Text</type>
</CustomField>