objects/Survey__c/fields/ESO_3f_SupExp__c.field-meta.xml
<CustomField>
    <fullName>ESO_3f_SupExp__c</fullName>
    <label>ESO_3f_SupExp</label>
    <length>20</length>
    <type>Text</type>
</CustomField>