objects/Survey__c/fields/ESO_3g_Recommend__c.field-meta.xml
<CustomField>
    <fullName>ESO_3g_Recommend__c</fullName>
    <label>ESO_3g_Recommend</label>
    <length>20</length>
    <type>Text</type>
</CustomField>