objects/Survey__c/fields/ESO_3h_Rate__c.field-meta.xml
<CustomField>
    <fullName>ESO_3h_Rate__c</fullName>
    <label>ESO_3h_Rate</label>
    <length>20</length>
    <type>Text</type>
</CustomField>