objects/Survey__c/fields/ESO_4_Comment__c.field-meta.xml
<CustomField>
    <fullName>ESO_4_Comment__c</fullName>
    <label>ESO_4_Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>