objects/Survey__c/fields/FTAM_1_Detractor__c.field-meta.xml
<CustomField>
    <fullName>FTAM_1_Detractor__c</fullName>
    <formula>CASE( FTAM_1_Recommend__c, &apos;0&apos;,1,&apos;1&apos;,1,&apos;2&apos;,1,&apos;3&apos;,1,&apos;4&apos;,1,&apos;5&apos;,1,&apos;6&apos;,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FTAM_1_Detractor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>