objects/Survey__c/fields/FTAM_1_NPS__c.field-meta.xml
<CustomField>
    <fullName>FTAM_1_NPS__c</fullName>
    <label>FTAM_1_NPS</label>
    <length>20</length>
    <type>Text</type>
</CustomField>