objects/Survey__c/fields/FTAM_2_CSAT__c.field-meta.xml
<CustomField>
    <fullName>FTAM_2_CSAT__c</fullName>
    <label>FTAM Overall Satisfaction Factor</label>
    <length>20</length>
    <type>Text</type>
</CustomField>