objects/Survey__c/fields/FTAM_2_Reason__c.field-meta.xml
<CustomField>
    <fullName>FTAM_2_Reason__c</fullName>
    <label>FTAM_2_Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>