objects/Survey__c/fields/FTAM_2_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>FTAM_2_Satisfaction__c</fullName>
    <label>FTAM Overall Satisfaction</label>
    <length>50</length>
    <type>Text</type>
</CustomField>