objects/Survey__c/fields/FTAM_3_Instrumental__c.field-meta.xml
<CustomField>
    <fullName>FTAM_3_Instrumental__c</fullName>
    <label>FTAM_3_Instrumental</label>
    <length>50</length>
    <type>Text</type>
</CustomField>