objects/Survey__c/fields/FTAM_4_Trusted__c.field-meta.xml
<CustomField>
    <fullName>FTAM_4_Trusted__c</fullName>
    <label>FTAM_4_Trusted</label>
    <length>50</length>
    <type>Text</type>
</CustomField>