objects/Survey__c/fields/FTAM_5_Deployment__c.field-meta.xml
<CustomField>
    <fullName>FTAM_5_Deployment__c</fullName>
    <label>FTAM_5_Deployment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>