objects/Survey__c/fields/FTAM_6_Operationalized__c.field-meta.xml
<CustomField>
    <fullName>FTAM_6_Operationalized__c</fullName>
    <label>FTAM_6_Operationalized</label>
    <length>50</length>
    <type>Text</type>
</CustomField>