objects/Survey__c/fields/FTAM_7_Planning__c.field-meta.xml
<CustomField>
    <fullName>FTAM_7_Planning__c</fullName>
    <label>FTAM_7_Planning</label>
    <length>50</length>
    <type>Text</type>
</CustomField>