objects/Survey__c/fields/FTAM_8_Comment__c.field-meta.xml
<CustomField>
    <fullName>FTAM_8_Comment__c</fullName>
    <label>FTAM_8_Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>