objects/Survey__c/fields/Implement_1_Detractor__c.field-meta.xml
<CustomField>
    <fullName>Implement_1_Detractor__c</fullName>
    <formula>CASE( Implement_1_Recommend__c, &apos;0&apos;,1,&apos;1&apos;,1,&apos;2&apos;,1,&apos;3&apos;,1,&apos;4&apos;,1,&apos;5&apos;,1,&apos;6&apos;,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Implement Detractor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>