objects/Survey__c/fields/Implement_1_Recommend__c.field-meta.xml
<CustomField>
    <fullName>Implement_1_Recommend__c</fullName>
    <label>Implement NPS Factor</label>
    <length>20</length>
    <type>Text</type>
</CustomField>