objects/Survey__c/fields/Implement_2_Reason__c.field-meta.xml
<CustomField>
    <fullName>Implement_2_Reason__c</fullName>
    <label>Implement_2_Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>