objects/Survey__c/fields/Implement_3_Prepare__c.field-meta.xml
<CustomField>
    <fullName>Implement_3_Prepare__c</fullName>
    <label>Implement_3_Prep</label>
    <length>20</length>
    <type>Text</type>
</CustomField>