objects/Survey__c/fields/Implement_4_Clear__c.field-meta.xml
<CustomField>
    <fullName>Implement_4_Clear__c</fullName>
    <label>Implement_4_Plan</label>
    <length>20</length>
    <type>Text</type>
</CustomField>