objects/Survey__c/fields/Implement_5_Length__c.field-meta.xml
<CustomField>
    <fullName>Implement_5_Length__c</fullName>
    <label>Implement_5_Duration</label>
    <length>20</length>
    <type>Text</type>
</CustomField>