objects/Survey__c/fields/Implement_6_Value__c.field-meta.xml
<CustomField>
    <fullName>Implement_6_Value__c</fullName>
    <label>Implement_6_Value</label>
    <length>20</length>
    <type>Text</type>
</CustomField>