objects/Survey__c/fields/Implement_7_Comment__c.field-meta.xml
<CustomField>
    <fullName>Implement_7_Comment__c</fullName>
    <label>Implement_7_Comment</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>