objects/Survey__c/fields/Implement_8a_Name__c.field-meta.xml
<CustomField>
    <fullName>Implement_8a_Name__c</fullName>
    <label>Implement_8a_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>