objects/Survey__c/fields/Implement_8b_Company__c.field-meta.xml
<CustomField>
    <fullName>Implement_8b_Company__c</fullName>
    <label>Implement_8b_Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>