objects/Survey__c/fields/InternalComment__c.field-meta.xml
<CustomField>
    <fullName>InternalComment__c</fullName>
    <label>InternalComment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>