objects/Survey__c/fields/ISR__c.field-meta.xml
<CustomField>
    <fullName>ISR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ISR</label>
    <referenceTo>Account_Support_Request__c</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>