objects/Survey__c/fields/Management_review_completed__c.field-meta.xml
<CustomField>
    <fullName>Management_review_completed__c</fullName>
    <description>This will be used as an identifier to check if low CSAT surveys have been handled and reviewed : Jira ticket SS-9217</description>
    <label>Management review completed</label>
    <type>Date</type>
</CustomField>