objects/Survey__c/fields/Onboard_1_NPS__c.field-meta.xml
<CustomField>
    <fullName>Onboard_1_NPS__c</fullName>
    <label>Onboard NPS</label>
    <length>20</length>
    <type>Text</type>
</CustomField>