objects/Survey__c/fields/Onboard_1_Promoter__c.field-meta.xml
<CustomField>
    <fullName>Onboard_1_Promoter__c</fullName>
    <formula>CASE( Onboard_1_Recommend__c, &apos;10&apos;,1,&apos;9&apos;,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Onboard Promoter</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>