objects/Survey__c/fields/Onboard_1_Recommend__c.field-meta.xml
<CustomField>
    <fullName>Onboard_1_Recommend__c</fullName>
    <label>Onboard NPS Factor</label>
    <length>20</length>
    <type>Text</type>
</CustomField>