objects/Survey__c/fields/Onboard_2_Reason__c.field-meta.xml
<CustomField>
    <fullName>Onboard_2_Reason__c</fullName>
    <label>Onboard_2_Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>