objects/Survey__c/fields/Onboard_3_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Onboard_3_Outcome__c</fullName>
    <label>Onboard_3_Aligned</label>
    <length>20</length>
    <type>Text</type>
</CustomField>