objects/Survey__c/fields/Onboard_4_Prepare__c.field-meta.xml
<CustomField>
    <fullName>Onboard_4_Prepare__c</fullName>
    <label>Onboard_4_Prepared</label>
    <length>20</length>
    <type>Text</type>
</CustomField>