objects/Survey__c/fields/Onboard_5_Comment__c.field-meta.xml
<CustomField>
    <fullName>Onboard_5_Comment__c</fullName>
    <label>Onboard_5_Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>