objects/Survey__c/fields/Onboard_6a_Name__c.field-meta.xml
<CustomField>
    <fullName>Onboard_6a_Name__c</fullName>
    <label>Onboard_6a_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>