objects/Survey__c/fields/Onboard_6b_Company__c.field-meta.xml
<CustomField>
    <fullName>Onboard_6b_Company__c</fullName>
    <label>Onboard_6b_Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>