objects/Survey__c/fields/Overall_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Overall_Satisfaction__c</fullName>
    <description>Captures the customer’s overall satisfaction rating with the deployment provider. JIRA: SS‑13029</description>
    <label>Overall Satisfaction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>