objects/Survey__c/fields/Overall_Satisfaction_Why__c.field-meta.xml
<CustomField>
    <fullName>Overall_Satisfaction_Why__c</fullName>
    <description>Captures qualitative feedback explaining the satisfaction rating provided. JIRA: SS‑13029</description>
    <label>Overall Satisfaction Why</label>
    <type>TextArea</type>
</CustomField>