objects/Survey__c/fields/OwnerCurrentUser__c.field-meta.xml
<CustomField>
    <fullName>OwnerCurrentUser__c</fullName>
    <formula>CASE($User.Id,
Case__r.OwnerId ,&apos;True&apos;,
Case__r.Owner:User.ManagerId,&apos;True&apos;,
Case__r.Owner:User.Manager.ManagerId,&apos;True&apos;,
Case__r.Owner:User.Manager.Manager.ManagerId,&apos;True&apos;,
Account__r.OwnerId ,&apos;True&apos;,
Account__r.Owner.ManagerId,&apos;True&apos;,
Account__r.Owner.Manager.ManagerId,&apos;True&apos;,
Account__r.Owner.Manager.Manager.ManagerId,&apos;True&apos;,
&apos;False&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Current User</label>
    <type>Text</type>
</CustomField>