objects/Survey__c/fields/Positive_Experience__c.field-meta.xml
<CustomField>
    <fullName>Positive_Experience__c</fullName>
    <description>Measures how positive the customer’s onboarding experience was with the deployment provider. JIRA: SS‑13029</description>
    <label>Positive Experience</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>