objects/Survey__c/fields/Professional_Courteous_Responsive__c.field-meta.xml
<CustomField>
    <fullName>Professional_Courteous_Responsive__c</fullName>
    <description>Assesses the provider’s professionalism, courtesy, and responsiveness during the engagement. JIRA: SS‑13029</description>
    <label>Professional Courteous Responsive</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>