objects/Survey__c/fields/Promoter__c.field-meta.xml
<CustomField>
    <fullName>Promoter__c</fullName>
    <description>Promoter (Only for Transactional/Relational)</description>
    <formula>CASE(Name,&apos;Support Center CSAT&apos;,CASE( Case_1_Recommend__c, &apos;10&apos;,1,&apos;9&apos;,1,0),&apos;Relational NPS&apos;,CASE( Relational_1_Recommend__c, &apos;10&apos;,1,&apos;9&apos;,1,0),&apos;Relational NPS - Japan&apos;,CASE( Relational_1_Recommend__c, &apos;10&apos;,1,&apos;9&apos;,1,0),null)</formula>
    <label>Promoter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>