objects/Survey__c/fields/Relational_1_NPS__c.field-meta.xml
<CustomField>
    <fullName>Relational_1_NPS__c</fullName>
    <label>Relational NPS</label>
    <length>20</length>
    <type>Text</type>
</CustomField>