objects/Survey__c/fields/Relational_2_Recommend_Reason__c.field-meta.xml
<CustomField>
    <fullName>Relational_2_Recommend_Reason__c</fullName>
    <label>Relational_2_Recommend_Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>