objects/Survey__c/fields/Relational_3_Experience__c.field-meta.xml
<CustomField>
    <fullName>Relational_3_Experience__c</fullName>
    <label>Relational_3_Experience</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>