objects/Survey__c/fields/Relational_4_Value_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Relational_4_Value_Satisfaction__c</fullName>
    <label>Relational_4_Value_Satisfaction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Extremely satisfied</fullName>
            </value>
            <value>
                <fullName>Very satisfied</fullName>
            </value>
            <value>
                <fullName>Somewhat satisfied</fullName>
            </value>
            <value>
                <fullName>Not so satisfied</fullName>
            </value>
            <value>
                <fullName>Not at all satisfied</fullName>
            </value>
            <value>
                <fullName>非常に満足しています</fullName>
            </value>
            <value>
                <fullName>とても満足</fullName>
            </value>
            <value>
                <fullName>やや満足</fullName>
            </value>
            <value>
                <fullName>あまり満足していない</fullName>
            </value>
            <value>
                <fullName>まったく満足していない</fullName>
            </value>
            <value>
                <fullName>非常に満足</fullName>
            </value>
            <value>
                <fullName>普通</fullName>
            </value>
            <value>
                <fullName>やや不満</fullName>
            </value>
            <value>
                <fullName>非常に不満</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>