objects/Survey__c/fields/Relational_5_Value_Satisfaction_Reason__c.field-meta.xml
<CustomField>
    <fullName>Relational_5_Value_Satisfaction_Reason__c</fullName>
    <label>Relational_5_Value_Satisfaction_Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>